# fedmcp-connect

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
demo_connector/: connector.py  tool.schema.json
fmcpx/: __init__.py  __main__.py  kms_jws.py
fmcpx.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fmcpx/templates/basic/: Dockerfile
foundry_conn/: Dockerfile  __init__.py  connector.py  foundry.py  tool.schema.json
hr_connector/: connector.py  tool.schema.json
tests/: test_cli.py
